# WinMTFC

./: .gitignore  CMakeLists.txt  README.md
src/: file_copy.c  file_copy.h  handle_error.c  handle_error.h  main.c
